Version 0.9 (In Progress)
 * When writing Opus Audio, by default calculate the Granule
   postion (disable with packets page per of -1)
 * Allow control of the number of Opus Audio packets per page,
   to control granule accuracy. (thanks to @msalikhov)

Version 0.8 (2016-02-17)
 * Correct close / reset logic for Tika in OggDetector
 * Common logic on audio statistics moved from Tika Parsers
   and InfoTools into OggAudioStatistics
 * New OpusInfoTool
 * Common logic and support for Ogg Audio info tools,
   used by VorbisInfoTool and OpusInfoTool
 * Support for updating of granule position while writing packets
   (thanks to @andrm)
 * Opus audio packet-level statistics (thanks to @andrm)
 * New FlacInfoTool and FLAC Comments Tool
 * Partial FLAC support for reading frames and subframes. Still
   a work-in-progress, and no audio-decoding support exists
 * If an EOF is hit during Ogg Page read, log + treat as no
   further packets rather than giving an Exception

Version 0.7 (2014-12-21)
 * VorbisFile / OpusFile / etc with close methods support
   the java.io.Closeable() interface
 * Skeleton (stream metadata) read support, and info tool
 * Common interfaces for Audio streams and headers
 * Support for libopus 1.1 generated Opus files, which have
   padding after comments but no framing (not all formats do)
 * Basic Theora read support

Version 0.6 (2014-05-09)
 * Tika audio parsers extraction of audio length
 * Fixed CRC warning on all-255 checksums

Version 0.4 (2014-03-18)
 * Improved Tika detection
 * Improved Tika parser metadata for general types
 * OggStreamIdentifier to make stream type detection cleaner
 * Basic Fisbone / Skeleton read support
 * Speex support at a similar level to Vorbis
 * Comment tools for all supported audio formats

Version 0.3 (2014-03-09)
 * Opus support at a similar level to Vorbis

Version 0.2 (2012-08-02)
 * Update to Tika 1.2
 * Fixed dependency scopes

Version 0.1 (2012-01-26)
 * Initial Version